src/test/ui/generics/issue-80512-param-reordering-with-defaults.rs
#![crate_type = "lib"]

struct S<T = (), 'a>(&'a T);
//~^ ERROR lifetime parameters must be declared prior to type and const parameters
